--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,3 @@
-!
 <!DOCTYPE html>
 <html>
 
@@ -7,7 +6,7 @@
 </head>
 
 <body>
-    {{Hello . | upper}}
+    Hello {{ . | upper}}
 </body>
 
 </html>
